2006-04-14 Yen-Ju Chen <yjchenx at gmail>

	* Revert back to an older version
	  because newer one break the move/resize initialied by menu 
	  then mouse movement.
	* Remove ref in AZAction.
	* Port mouse.

2006-04-13 Yen-Ju Chen <yjchenx at gmail>

	* Use NSMutableArray for focus_order;
	* port ObAction into AZAction.

2006-04-10 Yen-Ju Chen <yjchenx at gmail>

	* Port menu entry (So far so good).
	* Port ObMenu (Still good).
	* Port client_menu and client_list_menu.
	* Hide focus_order in preparation to port.

2006-04-08 Yen-Ju Chen <yjchenx at gmail>

	* move parse one-level up.
	* port keyboard.
	* use notification when client is destroyed.

2006-04-07 Yen-Ju Chen <yjchenx at gmail>

        * Working on AZStacking.
	* Hope to tam the beast.
	* Use NSString in AZClient.
	* Remove glib from AZEventHandler.
	* Remove glib from AZMenuFrame.m (Need more test).
	* Port keytree to AZKeyTree.

2006-04-06 Yen-Ju Chen <yjchenx at gmail>

	* Use AZWindow protocol instead crash-prone ObWindow.
	(This could be unstable).
	* Remove menuframe and clean up ObWindow.
	* Remove some of the glib (gint, glong and gboolean mainly).
	* Remove ObClient.
	* de-glib window.

2006-04-05 Yen-Ju Chen <yjchenx at gmail>

	* Try to implement arbitrary window level.
	* Improve GNUstep window style.
	{Hope it is a stable version).
	* Finish arbitrary window level (sort of).
	* Finish porting menuframe.
	* Use AZClient for transient_for (This was unstable before).

2006-04-04 Yen-Ju Chen <yjchenx at gmail>

	* Move focus into AZFocusManager.
	* Use AZClient in transients.
	* Support GNUstep window style.
	* Merge into trunk (Hope it work).
	* Add README.

2006-04-03 Yen-Ju Chen <yjchenx at gmail>

	* move place and resist as category of AZClient.
	* finish porting on popup, icon popup and pager popup.
	* add stacking back in AZPopUp.
	  It has no any effect, but potentially useful for stacking.
	* port moveresize.
	* use AZClient in focus.
	* use protocol instead of callback for x event.
