@@ -5,6 +5,7 @@
 	  then mouse movement.
 	* Remove ref in AZAction.
 	* Port mouse.
+	* Remove most of glib in AZKeyboardHandler.
 
 2006-04-13 Yen-Ju Chen <yjchenx at gmail>
 
